--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
 			  </div>
 			</div>
 		 </div>
-	  </div> -->
-    </section>
+	  </div> 
+    </section> -->
 
 <!-- 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
       <div class="container"> -->
