--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-<!-- 								<p class="mb-4">
-<!-- 									<span class="number" data-number="30">0</span> <span>+</span>
-									<span>&nbsp; Projects completed</span> -->
+<!-- 								<!-- <p class="mb-4">
+									<span class="number" data-number="30">0</span> <span>+</span>
+									<span>&nbsp; Projects completed</span>
 								</p> -->
 								<p><a href="https://www.linkedin.com/in/viraj-khamankar/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
