--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-<!-- 								<!-- <p class="mb-4">
+								<!-- <p class="mb-4">
 									<span class="number" data-number="30">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p> -->
