--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Engineer  '
-						// 'YouTuber  ',
-						// 'Teacher   ',
+						'Engineer  ',
+						'Data Enthusiast',
+						'SQL Expert',
 						];
 
 						// Create a function to display the typing animation for a given text
