--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
           </div>
         </div>
 	<br>
-		added justify-content-center to center align the last two projects
-		<div class="row d-flex justify-content-center">  
+<!-- 		added justify-content-center to center align the last two projects
+		<div class="row d-flex justify-content-center">   -->
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/VirajKhamankar/Product-Sales-Forecasting-using-Quantitative-Methods" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
