--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Post Graduation Diploma In Big Data Analytics | PG-DBDA |</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Marathi, Hindi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Tableau</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, PySpark, Excel, Git, JIRA, Google Analytics</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Excel, Git, JIRA, Google Analytics</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
 									
 								</ul>
