--- a/index.html
+++ b/index.html
@@ -569,7 +569,9 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1-C3jIcyay9E2uU1WEI5YjkxnV608EUWx/view?usp=sharing">resumelink</a></p>
+	            <p><a href="https://drive.google.com/drive/folders/1rXAPU9gCnWPgTsx8cXwPsZp91Xq4jKje?usp=sharing">resumelink</a></p>
+<!-- 				            <p><a href="https://drive.google.com/file/d/1-C3jIcyay9E2uU1WEI5YjkxnV608EUWx/view?usp=sharing">resumelink</a></p> -->
+
 	          </div>
           </div>
 
@@ -614,5 +616,5 @@
   
   <script src="js/main.js"></script>
     
-  </body>
+  </body> 
 </html>
