--- a/index.html
+++ b/index.html
@@ -569,9 +569,8 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-<!-- 		         <p><a href="https://drive.google.com/file/d/1-C3jIcyay9E2uU1WEI5YjkxnV608EUWx/view?usp=sharing">resumelink</a></p> -->
-			<p><a href="https://drive.google.com/drive/folders/1rXAPU9gCnWPgTsx8cXwPsZp91Xq4jKje?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
-
+ 		         <p><a href="https://drive.google.com/file/d/1Ud4BkvBF9F9w-kA0N6lnT7onrmTCla2C/view?usp=sharing">resumelink</a></p>
+ 
 	          </div>
           </div>
 
