--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
 
 						// Create an array of typing text
 						const typingTexts = [
+						'Database Expert',
+						'SQL Expert'
 						'Data Enthusiast',
-						'SQL Expert',
-						'Machine Learning Enthusiast'
+						'Machine Learning, AI Enthusiast'
 						];
 
 						// Create a function to display the typing animation for a given text
