--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Database Expert',
-						'SQL Expert'
+						'SQL Expert',
 						'Data Enthusiast',
 						'Machine Learning, AI Enthusiast'
 						];
